# ChestXRay

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
chestxray/: bit_net.py  config.py  datasets.py  draft.py  functional.py  layers.py  losses.py  misc.py  model_utils.py  nets.py  optimizers.py  postprocess.py  tb_helpers.py  tiff_to_jpeg.py  train_utils.py  tta.py  util.py  visualize.py
notebooks/: C1M1_Assignment.ipynb  Create_HDF5_data.ipynb  Find_Drop_Duplicates.ipynb  Hard_Classes_Permutation.ipynb  Load_Images.ipynb  Make_EfNet.ipynb  Sanity_Check.ipynb  Submit_Test.ipynb  Suspicious_Input.ipynb  Train_Eval.ipynb  Train_Eval_Skeleton.ipynb  Train_Eval_V1.ipynb
scripts/: train_eval_v1.py
submit_panda/: submit_patch.py
